# Electronic-Mat

./: MatDataAnalysis.spec  README.md  bundle.bat  pyproject.toml  resource.qrc  resource_rc.py
exe/: test.csv  test1.csv  test2.csv
src/: main.py  record_test.csv
src/utils/: low_freaquency_amplitude.py  mainUI.py  mainUI.ui  mainWindow.py  mat_48.py  plot.py
